<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Personal Fuel Control</string>
    <string name="logo">Logo de la app</string>
    <string name="bottom_logo">Logo de la app sin nombres</string>
    <string name="no_have_an_account">Aún no tienes cuenta, PULSA AQUÍ</string>
    <string name="username">Username</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="vehicle">Vehículo</string>
    <string name="liter_price">Precio del litro</string>
    <string name="liters_refueled">Litros repostados</string>
    <string name="refuel_consumption">Consumo del repostaje</string>
    <string name="vehicle_consumption">Consumo del vehículo</string>
    <string name="glp">Glp</string>
    <string name="refuels">Repostajes</string>
    <string name="station_has_glp">Dispone de GLP :</string>
    <string name="delete">BORRAR</string>
    <string name="med_consumption">Consumo medio</string>
    <string name="AppDesc">Lleve un control total de los consumos de sus vehículos, tanto particulares como de empresa.\n\nCon PFC usted podrá:\n- Registrar sus vehículos.\n- Registrar sus gasolineras favoritas.\n- Registrar el repostaje de cualquiera de sus vehículos.\n- Consultar el historial de los repostajes.\n- Ver la media de consumo y kilómetros realizados de todos sus vehículos</string>
    <string name="vehiculo_matricula">Matrícula del vehículo</string>
    <string name="vehicle_model">Modelo del vehículo</string>
    <string name="license_plate">Matrícula del vehículo</string>
    <string name="vehicle_brand">Marca del vehículo</string>
    <string name="vehicle_fuel1">Tipo de combustible</string>
    <string name="vehicle_fuel2">Combustible auxiliar (GLP, eléctrico, etc)</string>
    <string name="create">REGISTRAR</string>
    <string name="has_fuel2">Doble combustible</string>
    <string name="AppName">Personal Fuel Control</string>
    <string name="consumption_statistics">Estadísticas de Consumos</string>
    <string name="filter_results">Fitrar resultados</string>
    <string name="return_to_mainMenu">VOLVER A PANTALLA PRINCIPAL</string>
    <string name="refueling_detail">Detalle del repostaje</string>
    <string name="main_menu">PANTALLA PRINCIPAL</string>
    <string name="user_summary">Resumen de usuario</string>
    <string name="see_graphics">VER GRÁFICAS</string>
    <string name="register">REGISTRO</string>
    <string name="access">ACCEDER</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">Registro de Usuario</string>
    <string name="go_register">Registrar</string>
    <string name="insert_refuel_details">Ingrese los detalles del repostaje</string>
    <string name="vehicle_selected">Vehículo seleccionado:</string>
    <string name="license">Matrícula</string>
    <string name="fuel_refueled">Combustible repostado</string>
    <string name="amount">Euros repostados</string>
    <string name="insert_amount">Ingrese la cantidad en €</string>
    <string name="actual_price">Precio actual del combustible (€/l)</string>
    <string name="e_l">€/L</string>
    <string name="km_travelled">Kilómetros realizados con este combustible</string>
    <string name="station">Estación de servicio</string>
    <string name="fulled">Llenado</string>
    <string name="only_double_refuel">Rellene los siguientes datos solo si es un repostaje doble</string>
    <string name="double_refuel">Doble repostaje</string>
    <string name="second_fuel_refueled">Segundo combustible repostado</string>
    <string name="second_fulled">Llenado del segundo depósito</string>
    <string name="station_name">Nombre de la Estación</string>
    <string name="station_adress">Dirección</string>
    <string name="location">Localidad</string>
    <string name="province">Provincia</string>
    <string name="station_with_GLP">Estación con GLP</string>
    <string name="register_station">Registrar Estación</string>
    <string name="fuel">Combustible</string>
    <string name="actual_kms">Kilómetros actuales</string>
    <string name="second_fuel">Segundo combustible</string>
    <string name="select_refuel_vehicle">Seleccione el vehículo del repostaje</string>
    <string name="register_date">Fecha de registro</string>
    <string name="refuel_data">Fecha de repostaje</string>
    <string name="amount_refueled">Importe repostado</string>
    <string name="price">Precio</string>
    <string name="station_refuel">Estación de repostaje</string>
    <string name="tank_fulled">LLenado de depósito</string>
    <string name="details">DETALLES</string>
    <string name="address">Dirección</string>
    <string name="see">VER</string>
    <string name="number_of_refuels">Número de repostajes</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="registers_vehicles">Coches registrados</string>
    <string name="refuels_registers">Gasolineras registradas</string>
    <string name="refuels_last_year">Número de repostajes el último año</string>
    <string name="most_used_vehicle">Coche más usado</string>
    <string name="station_most_used">Gasolinera más visitada</string>
    <string name="double_fuel">Doble Combustible</string>
    <string name="register_refuel">REGISTRAR REPOSTAJE</string>
    <string name="register_vehicle">REGISTRAR VEHÍCULO</string>
    <string name="register_station2">REGISTRAR GASOLINERA</string>
    <string name="details_of_vehicle">"DETALLE DEL VEHÍCULO: "</string>
    <string name="alert">ALERTA, CONFIRMACIÓN</string>
    <string name="are_you_sure">¿EStá seguro de querer borrar el vehículo?</string>
    <string name="vehicles">VEHICULOS</string>
    <string name="stations">GASOLINERAS</string>
    <string name="history">HISTORIAL</string>
    <string name="exit">SALIR</string>
    <string name="change_language">LANGUAGE</string>


    <string-array name="filter_options">
        <item>TODOS</item>
        <item>ÚLTIMOS 12 MESES</item>
        <item>ÚLTIMOS 6 MESES</item>
    </string-array>



</resources>