<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CBD5D4"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- Logo Superior y Nombre de la App -->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:orientation="horizontal"
        android:padding="10dp"
        android:translationY="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="84dp"
            android:layout_height="68dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logosin" />

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Botones de Registro y Acceso -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorFondoOscuro"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnAcceder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorFondoOscuro"
            android:text="@string/access"
            android:textColor="@color/white" />
    </LinearLayout>

    <!-- Texto informativo -->

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/AppDesc"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Logo Inferior -->

    <ImageView
        android:id="@+id/logoBottomImageView"
        android:layout_width="232dp"
        android:layout_height="178dp"
        android:contentDescription="@string/bottom_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logoapp"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
