<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="goVehicleRefuels">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/detail_address_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/detail_site_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />


            <TextView
                android:id="@+id/detail_province_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />


            <TextView
                android:id="@+id/detail_glp_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_glp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />


            <TextView
                android:id="@+id/detail_refuels_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refuels"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_refuels"
                    android:layout_width="188dp"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/goRefuels"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/colorFondoOscuro"
                    android:layout_height="wrap_content"
                    android:text="@string/see" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
